k8s/sandbox-service.yml
# k8s/service.yml

apiVersion: v1
kind: Service

metadata:
  name: sandbox-service

spec:
  selector:
    app: sandbox

  type: ClusterIP

  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
