k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: router-service
                port:
                  number: 80

          - path: /api/ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

          - path: /preview
            pathType: Prefix
            backend:
              service:
                name: router-service
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sandbox-service
                port:
                  number: 80
